syntax = "proto3";
package articles;

option go_package = "./pkg/pb";

service ArticleService {
  rpc CreateArticle(CreateArticleRequest) returns (GenericResponse) {}
  rpc DetailArticle(ArticleDetailRequest) returns (GenericResponse) {}
  rpc GetUserArticlePoint(UserArticlePointRequest) returns (UserArticlePointResponse) {}
}

message CreateArticleRequest {
  string title = 1;
  string content = 2;
  int32 created_by = 3;
}

message ArticleDetailRequest {
  int32 id = 1;
}

message Article {
  int32 id = 1;
  string title = 2;
  string content = 3;
  int32 point = 4;
  int32 view = 5;
  int32 created_by = 6;
  int32 created_at = 7;
  int32 updated_at = 8;
}

message UserArticlePointRequest {
  int32 created_by = 1;
}

message UserArticlePointResponse {
  int64 status = 1;
  string error = 2;
  int32 total_point = 3;
}

message GenericResponse {
  int64 status = 1;
  string error = 2;
  Article article = 3;
}